fix pricing alignment

--- a/static/output.css
+++ b/static/output.css
@@ -2965,6 +2965,11 @@
       aspect-ratio: var(--aspect-video);
     }
   }
+  .md\:min-h-28 {
+    @media (width >= 48rem) {
+      min-height: calc(var(--spacing) * 28);
+    }
+  }
   .md\:w-8\/12 {
     @media (width >= 48rem) {
       width: calc(8 / 12 * 100%);
